# eu-ai-act-compliance-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  SKILL.md  acp.json  actor.json  apify-actor.json  auth_middleware.py  compliance_neural.py  conftest.py  glama.json  llms.txt  manifest.json  mcpize.json  mcpize.yaml  package.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/workflows/: ci.yml  compliance-pdca.yml  cosign-sign.yaml  eurlex-sync.yml  mcp-smithery-publish.yml  pypi-publish.yml  scorecard.yml  test.yml
.well-known/: agent.json  mcp-server  mcp-server-card.json
.well-known/mcp/: server-card.json
data/: regulations.db  regulations.db-shm
scripts/: bump_version.sh  eurlex_sync.py  lint_publish_meta.py  scorecard.py
tests/: test_fuzz.py  test_new_tools.py  test_tools_full.py
