[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eu-ai-act-compliance-mcp"
version = "1.0.0"
description = "Eu Ai Act Compliance tools for AI agents. Capabilities: classify ai risk, check compliance, generate documentation. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "ai-governance", "compliance", "meok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/eu-ai-act-compliance-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
eu_ai_act_compliance_mcp = "server:main"
