[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eu-ai-act-compliance-mcp"
readme = "README.md"
version = "1.8.3"
description = "EU AI Act compliance for AI agents. 410 articles from EUR-Lex via FTS5 search. Instant risk scan, deadline tracker, 42-point audit, documentation generator, penalty calculator. Zero-config free tier. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mcp", "mcp-server", "model-context-protocol", "ai-governance", "compliance", "eu-ai-act", "dora", "nis2", "cra", "gdpr", "meok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/eu-ai-act-compliance-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "data/regulations.db", "llms.txt", ".cursorrules"]

[project.scripts]
eu-ai-act-compliance-mcp = "server:main"
